<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OrangesToOranges</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello\nWorld!</string>
    <string name="button0">Stats</string>
    <string name="button1">Play\nGame</string>
    <string name="button2">Create\nGame</string>
    <string name="button3">Friend\nList</string>
    <string name="button4">Account\nSettings</string>
    <string name="button5">Login</string>
    <string name="largetext">Large Text</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
<<<<<<< HEAD
    <string name="signin">Sign In</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
	<string name="email_confirm">Confirm Email</string>
    
=======
    <string name="lockCard">Lock In</string>
    <color name="lightBlue">#997373D9</color>

>>>>>>> 0643a787e18f05e34278e8a17f193ac169ca14f7
</resources>
