<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" 
    >
    
    <EditText 
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:inputType="text"/>
    
    <EditText 
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    
	<Button
	    android:id="@+id/loginbutton" 
	    android:layout_width="130dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/login"/>
	    
</LinearLayout>
    
    
    