<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical" 
    >



    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/spacer4"
	    android:layout_width="match_parent"
	    android:layout_height="84dp" />

	<Button
	    android:id="@+id/button0" 
	    android:layout_width="130dp"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:text="@string/button0"
	    android:textStyle="bold" />
    
	<TextView
	    android:id="@+id/spacer5"
	    android:layout_width="match_parent"
	    android:layout_height="60dp" 
	    />
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal" 
        >

        <Button
            android:id="@+id/button1"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:gravity="center" 
            android:textStyle="bold"
            android:text="@string/button1" 
            />

		<TextView
        	android:id="@+id/spacer1"
        	android:layout_width="20dp"
        	android:layout_height="match_parent" 
        	/>

        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:text="@string/button2"
            android:textStyle="bold"
            android:gravity="center" 
            />

    </LinearLayout>

    <TextView
        android:id="@+id/spacer2"
        android:layout_width="match_parent"
        android:layout_height="20dp"  
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal" 
        >

        <Button
            android:id="@+id/button3" 
            android:text="@string/button3"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center" 
            />
        <TextView
        	android:id="@+id/spacer3"
        	android:layout_width="20dp"
        	android:layout_height="match_parent" 
        	/>
        <Button
            android:id="@+id/button4"
            android:text="@string/button4" 
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>

</LinearLayout>